Working version of SpringBoot - Redis App. JUnits are pending

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 
-server.port=8090
+server.servlet.contextPath = /product-details
+server.port = 8090
+
+logging.level.org.springframework.web: INFO
 
 spring.cache.type = redis
-spring.redis.host = localhost
+spring.redis.host = 127.0.0.1
 spring.redis.port = 6379
