Tested Version of APP. JUnits still pending.

--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
 	<packaging>jar</packaging>
 
 	<name>myretail_product_details</name>
-	<description>Demo project for Spring Boot</description>
+	<description>SpringBoot App for Product Details CRUD Operations</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.0.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from data -->
 	</parent>
 
 	<properties>
@@ -40,11 +40,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
 		<dependency>
