--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.servlet.contextPath = /product-details
 server.port = 8090
 
-logging.level.org.springframework.web: INFO
+logging.level.org.springframework.web: TRACE
 
 spring.cache.type = redis
 spring.redis.host = 127.0.0.1
