Added HTTPS Capability for RestTemplate to retrieve the product name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ logging.level.org.springframework.web: TRACE
 
 spring.redis.host = 127.0.0.1
 spring.redis.port = 6379
+
+product.details.url = https://redsky.target.com/v2/pdp/tcin/13860428?excludes=taxonomy,price,promotion,bulk_ship,rating_and_review_reviews,rating_and_review_statistics,question_answer_statistics
